bg img path fix

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body a{
 
 }
 body{
-    background: url(/images/rose.jpg);
+    background: url(../images/rose.jpg);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
 }
