--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body a{
 
 }
 body{
-    background: url(/images/rose.jpg);
+    background: url(../images/rose.jpg);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
 }
@@ -53,7 +53,7 @@ body{
     width: 400px;
     margin: 50px auto;
     padding: 10px 20px 20px;
-    /* background: linear-gradient()); */
+    /* background: linear-gradient(blue)); */
     color: whitesmoke;
     border-radius: 10px;
 }
@@ -183,4 +183,10 @@ input:focus-visible{
     background-color:  rgb(82, 73, 63);
     padding: 6px;
     margin: 6px;
+}
+.OL{
+    color: aquamarine;
+}
+.h3{
+    color: rgb(124, 167, 253);
 }
