--- a/css/style.css
+++ b/css/style.css
@@ -184,12 +184,9 @@ input:focus-visible{
     padding: 6px;
     margin: 6px;
 }
-<<<<<<< HEAD
-.OL{
+.ol{
     color: aquamarine;
 }
 .h3{
     color: rgb(124, 167, 253);
 }
-=======
->>>>>>> 1e917b5004e56a383c32f536122e36696a257cf4
